--- a/styles/partials/_archive.scss
+++ b/styles/partials/_archive.scss
@@ -5,3 +5,36 @@
     width: 100%;
   }
 }
+
+.contributor-level {
+  display: flex;
+  margin: 30px 0;
+
+  .fa-stack {
+    flex: 1;
+  }
+
+  h2 {
+    align-self: center;
+    flex: 10;
+    margin-bottom: 0;
+    padding: 10px 55px;
+  }
+}
+
+.fa {
+  &.contributor-title-circle {
+    font-size: 3em;
+    left: 0;
+    position: absolute;
+    top: -24px;
+  }
+}
+
+.contributor {
+  margin-bottom: 60px;
+
+  .level {
+    padding-left: 130px;
+  }
+}
