widget and single stylings

--- a/styles/partials/main.scss
+++ b/styles/partials/main.scss
@@ -1,7 +1,10 @@
 // compileExpanded: ../$1.css
 
-// Single Proceeding Styles //
+// Single Sponsor Styles //
 @import 'single';
 
-// Proceedings Archive Styles //
+// Sponsors Archive Styles //
 @import 'archive';
+
+// Sponsors Archive Styles //
+@import 'widget';
