--- a/styles/partials/_widget.scss
+++ b/styles/partials/_widget.scss
@@ -2,23 +2,27 @@
   .carousel-inner {
     margin: auto;
     min-height: 400px;
-    width: 80%;
+    width: 90%;
   }
 
   .carousel-control-next,
   .carousel-control-prev {
-    width: 10%;
+    width: 5%;
   }
 }
 
 .sponsor-widget {
   .contributor-level {
     .widget-icon {
-      left: 6px;
+      left: 1px;
     }
 
     .fa.contributor-title-circle {
       left: -16px;
     }
+  }
+
+  .row.level {
+    margin-bottom: 30px;
   }
 }
