updated template logic and dash icon stylings

--- a/styles/partials/_archive.scss
+++ b/styles/partials/_archive.scss
@@ -38,7 +38,8 @@
 }
 
 .sponsor-level-icon,
-.sponsor-level-icon.fa  {
+.sponsor-level-icon.dashicons,
+.sponsor-level-icon.fa {
   font-size: 70px;
 }
 
